test/TestSuite/Syntax/Errors/multiple_durations.tjp
project test "Test" "1.0" 2008-02-02 +1m

task t "T" {
  start ${projectstart}
  milestone
# MARK: error 7 multiple_durations
  length 2d
}
